--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StormCalc"></activity>
+        <activity android:name=".StormCalc.StormCalc"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Algorithm"/>
-        <activity android:name=".Sampler"/>
-        <activity android:name=".Spring"/>
+        <activity android:name=".Algorithm.Algorithm"/>
+        <activity android:name=".Sampler.Sampler"/>
+        <activity android:name=".Spring.Spring"/>
     </application>
 
 </manifest>
